Fixing type + trying out eventsSub implementation

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -23,5 +23,5 @@
     "select": "اختر",
     "pay": "ادفع",
     "flight options for": "اختيار الدرجة للحجز",
-    "popular destinations": "أشهر الموجهات"
+    "popular destinations": "أشهر الوجهات"
 }
